push mofid hmtl css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <div class="titre">
         <h1>Quizz Tech</h1>
     </div>
-    <div class="Taleau de score">
+    <div class="tableau-de-score">
         <p>Tableau de score : </p>
+    </div>
+    <div class="resultat">
+        <span>Score : </span>
     </div>
 </body>
 </html>
