--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+    integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+     integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+     crossorigin=""></script>
     <link href="css/style.css" rel="stylesheet">
     <title>Quizz</title>
 </head>
@@ -16,8 +22,10 @@
     <div class="tableau-de-score">
         <p>Tableau de score : </p>
     </div>
+    <section id="map"/>
     <div class="resultat">
         <span>Score : </span>
     </div>
+    <script defer src="js/meteo.js"></script>
 </body>
 </html>
