modif html et css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div class="tableau-de-score">
         <p>Tableau de score : </p>
     </div>
+    <section class="map" id="map">
+        
+    </section>
     <div class="resultat">
         <span>Score : </span>
     </div>
