--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="tableau-de-score">
         <p>Tableau de score : </p>
     </div>
+    dic
     <section id="map"/>
     <div class="resultat">
         <span>Score : </span>
