--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
             <p>Tableau de score : </p>
         </div>
         <section id="map"/>
-        <div class="resultat">
-            <span>Score : </span>
-        </div>
+    </div>
+    <div class="resultat">
+        <span>Score : </span>
+    </div>
+    <div>
+        <input type="submit" class="submit" value="Valider">
     </div>
     <script defer src="js/meteo.js"></script>
 </body>
