je vous présente geoguessr

--- a/index.html
+++ b/index.html
@@ -16,24 +16,23 @@
 <body>
     <div class="titre">
         <h1>Quizz Tech</h1>
+        <p class="country-to-find"></p>
     </div>
     <div class="application">
         <div class="tableau-de-score">
             <p>Tableau de score : </p>
         </div>
-        <section id="map" />
+        <section id="map"></section>
     </div>
     <div class="resultat">
         <span>Score : </span>
     </div>
-    <<<<<<< HEAD <script src="js/index.js">
-        </script>
-        =======
-        <div>
-            <input type="submit" class="submit" value="Valider">
-        </div>
-        <script defer src="js/meteo.js"></script>
-        >>>>>>> 6e848f7e0cb05e8590cbe14a12b92571a4a06ba3
+    <div>
+        <input type="submit" class="submit" value="Valider">
+    </div>
+    <script defer src="js/leafjetconfig.js"></script>
+    <script defer src="js/meteo.js"></script>
+    <script defer src="js/index.js"></script>
 </body>
 
 </html>
