--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
     <div class="titre">
         <h1>Quizz Tech</h1>
-        <p class="country-to-find"></p>
     </div>
 
     <div class="application">
@@ -27,7 +26,7 @@
         </div>
         <div class="questionnaire">
             <div class="question">
-                <h2>Question 1: Ou se trouve la France ?</h2>
+                <h2>Question 1: Ou se trouve <span class="country-to-find"></span> ?</h2>
             </div>
             <div class="map">
                 <section id="map" />
@@ -37,7 +36,9 @@
                 <input type="submit" class="submit" value="Valider">
             </div>
         </div>
+        <script defer src="js/leafjetconfig.js"></script>
         <script defer src="js/meteo.js"></script>
+        <script defer src="js/index.js"></script>
 </body>
 
 </html>
