--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="questionnaire">
             <div class="question">
-                <h2>Question 1: Ou se trouve <span class="country-to-find"></span> ?</h2>
+                <h2>Question 1: Où se trouve <span class="country-to-find"></span> ?</h2>
             </div>
             <div class="map">
                 <section id="map" />
