--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <section id="map" />
             </div>
             <div class="resultat">
-                <h3>Score : 15</h3>
+                <h3>Score : <span class="score">0</span></h3>
                 <input type="submit" class="submit" value="Valider">
             </div>
         </div>
