c encore plus mieux bo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<div class="application-totale"></div>
+    <div class="application-totale"></div>
     <div class="titre">
         <h1>Quizz Tech</h1>
     </div>
@@ -23,6 +23,32 @@
 
         <div class="tableau-de-score">
             <p>Tableau de score :</p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Pseudo</th>
+                        <th>Score</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>100</td>
+                    </tr>
+                    <tr>
+                        <td>Paul</td>
+                        <td>80</td>
+                    </tr>
+                    <tr>
+                        <td>George</td>
+                        <td>60</td>
+                    </tr>
+                    <tr>
+                        <td>Ringo</td>
+                        <td>40</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
         <div class="questionnaire">
             <div class="question">
