--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
 </head>
 
 <body>
-
+<div class=".application-totale">
     <div class="titre">
         <h1>Quizz Tech</h1>
     </div>
 
     <div class="application">
 
-        <div class="tableau-de-score">
-            <p>Tableau de score :</p>
-        </div>
-        <div class="questionnaire">
-            <div class="question">
-                <h2>Question 1: Ou se trouve la France ?</h2>
-            </div>
-            <div class="map">
-                <section id="map"/>
-            </div>
-        <div class="resultat">
-            <h3>Score : 15</h3>
-            <input type="submit" class="submit" value="Valider">
-        </div>
+    <div class="tableau-de-score">
+        <p>Tableau de score :</p>
     </div>
-        <script defer src="js/meteo.js"></script>
+    <div class="questionnaire">
+         <div class="question">
+            <h2>Question 1: Ou se trouve la France ?</h2>
+        </div>
+        <div class="map">
+            <section id="map"/>
+        </div>
+    <div class="resultat">
+        <h3>Score : 15</h3>
+        <input type="submit" class="submit" value="Valider">
+    </div>
+</div>
+    <script defer src="js/map.js"></script>
 </body>
 
 </html>
