--- a/pages/auth.html
+++ b/pages/auth.html
@@ -9,13 +9,11 @@
 </head>
 
 <body>
-    <div class="register-card">
-
+    <div class="auth-card">
+        <div class="signin-google"></div>
     </div>
 
-    <div class="login-card">
-
-    </div>
+    <script defer type="module" src="../js/auth.js"></script>
 </body>
 
 </html>
